feat - Atualização do JS do segundo paciente
Atualização de código envolvendo semântica e ordem, uma parte já codificado sobre o segundo paciente incluso variáveis para o mesmo paciente, cálculo IMC e etc.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 		<meta charset="UTF-8">
 		<title>Aparecida Nutrição</title>
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 
 	</head>
 	<body>
-
 		<header>
 			<div class="container">
 				<h1>Aparecida Nutrição</h1>
@@ -29,15 +28,15 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" id="primeiro-paciente" >
+						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">100</td>
+							<td class="info-peso">700</td>
 							<td class="info-altura">3.0</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" >
+						<tr class="paciente" id="segundo-paciente">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
@@ -72,6 +71,6 @@
 
 			</section>
 		</main>
-		<script src="js/jvscript.js"></script>
+		<script src="jvscript.js"></script>
 	</body>
 </html>
